; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_trace-event-parse.c_common_pc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_trace-event-parse.c_common_pc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scripting_context = type { i32 }

@common_pc.offset = internal global i32 0, align 4
@common_pc.size = internal global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"common_preempt_count\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @common_pc(%struct.scripting_context* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.scripting_context*, align 8
  %4 = alloca i32, align 4
  store %struct.scripting_context* %0, %struct.scripting_context** %3, align 8
  %5 = load %struct.scripting_context*, %struct.scripting_context** %3, align 8
  %6 = call i32 @get_common_field(%struct.scripting_context* %5, i32* @common_pc.size, i32* @common_pc.offset, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %10, %9
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @get_common_field(%struct.scripting_context*, i32*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
